stylesheet.css
/* fixing navbar to the top */
body {
  min-height: 75rem;
  /*padding-top: 4.5rem;*/
  padding-top: 70px;
}

/* overriding default jumbotron on mobile so all my pages show top of page on mobile */
/* since all my pages are wrapped in jumbotron */
.jumbotron {
  padding-top: 70px;
}

/*parallax effect*/
/*.background {*/
    /*width: 100%;*/
    /*height: 500px;*/
    /*may want to remove or change height 300px, or set it on each image*/
    /*min-height: 100%;*/
    /*background-attachment: fixed;*/
    /*background-size: auto;*/
    /*background-size: cover;*/
    /*background-position: center center;*/
/*}*/

.background {
    width: 100%;
    height: 100%;
    /*min-width: 100%;*/
    background-attachment: fixed;
    /*fixed background-attachment is what gives the image the parallax effect*/
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    background-color: black;
    min-height: 550px;
}

.background-forrest {
    /*background-image: url(assets/forrest.jpg);*/
    background-image: url(assets/data-web-gif.gif);
    min-height: 550px;
/*making this background image for now so it looks ok on mobile*/

    /*background-image: url(http://img.timeinc.net/time/photoessays/2008/trees/franklin_trees_01.jpg);*/
}


#rotate_word_container {
  height: 300px;
  min-height: 300px; /*height and min-height so changing words don't make site jump up and down*/
}

/*adding this because no bootstrap-social css for Medium icon*/
.btn-medium {
  color: #fff;
  background-color: purple;
  border-color: rgba(0,0,0,0.2);
}


/* shimmer effect on text */

.shimmer {
  display: inline-block;
  /*color: green;*/
  /*background: black -webkit-gradient(linear, 100% 0, 0 0, from(black), color-stop(0.5, #ffffff), to(black));*/
  /*background: #292b2c -webkit-gradient(linear, 100% 0, 0 0, from(#292b2c), color-stop(0.5, #ffffff), to(#292b2c));*/
  background: #292b2c -webkit-gradient(linear, 100% 0, 0 0, from(#292b2c), color-stop(0.5, #ffffff), to(#292b2c));
  background-position: -4rem top; /*50px*/
  background-repeat: no-repeat;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  -webkit-animation-name: shimmer;
  -webkit-animation-duration: 2.2s;
  -webkit-animation-iteration-count: infinite;
  -webkit-background-size: 4rem 100%; /*50px*/
}

@-webkit-keyframes shimmer {
    0% {
        background-position: -4rem top; /*50px*/
    }
    70% {
        background-position: 15.5rem top; /*~240px*/
    }
    100% {
        background-position: 15.5rem top; /*~240px*/
    }
}



/*shimmer on brand in navbar, will replace this with a different effect eventually */
.shimmer-brand {
  display: inline-block;
  /*background: black -webkit-gradient(linear, 100% 0, 0 0, from(black), color-stop(0.5, #ffffff), to(black));*/
  /*background: #292b2c -webkit-gradient(linear, 100% 0, 0 0, from(#292b2c), color-stop(0.5, #ffffff), to(#292b2c));*/
  background: #ffffff -webkit-gradient(linear, 100% 0, 0 0, from(yellow), color-stop(0.5, purple), to(yellow));
  background-position: -4rem top; /*50px*/
  background-repeat: no-repeat;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  -webkit-animation-name: shimmer;
  -webkit-animation-duration: 2.2s;
  -webkit-animation-iteration-count: infinite;
  -webkit-background-size: 4rem 100%; /*50px*/
}

@-webkit-keyframes shimmer {
    0% {
        background-position: -4rem top; /*50px*/
    }
    70% {
        background-position: 15.5rem top; /*~240px*/
    }
    100% {
        background-position: 15.5rem top; /*~240px*/
    }
}



/* rotating profile pictures */
#profile-pic {
  position:relative;
  height: 300px;
  width: 300px;
  margin: 0 auto;
  /*background-image: url("https://www.royalcanin.com/~/media/Royal-Canin/Product-Categories/dog-medium-landing-hero.ashx");*/
  background-image: url("assets/profile_pic_Ethan_Ryan_brady_bunch.jpg");
}

#profile-pic::after{
  content: ' ';
    display: block;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
    /*background-image: url("https://www.petfinder.com/wp-content/uploads/2012/11/152964589-welcome-home-new-cat-632x475.jpg");*/
    background-image: url("assets/profile_pic_Ethan_Ryan.jpg");
    background-repeat: no-repeat;
    background-position: 50% 0;
    background-size: cover;
}

@keyframes profile-pic-change {
  0% {
    opacity: 1;
  }
  45% {
    opacity: 1;
  }
  55% {
    opacity: 0;
  }
  100% {
    opacity: 0;
  }
}

#profile-pic::after {
animation-name: profile-pic-change;
animation-timing-function: ease-in-out;
animation-iteration-count: infinite;
animation-duration: 10s;
animation-direction: alternate;
}

/*email-address changes color and moves in a square*/
.email-address {
    width: 100%;
    height: 100%;
    /*background-color: red;*/
    position: relative;
    animation-name: email-address; /*references animation below*/
    animation-duration: 4s;
    animation-iteration-count: infinite;
}

/*this moves email-address in a square, right, down, left, up...*/
/*@keyframes email-address {
    0%   {color:red; left:0px; top:0px;}
    25%  {color:orange; left:25px; top:0px;}
    50%  {color:blue; left:25px; top:25px;}
    75%  {color:purple; left:0px; top:25px;}
    100% {color:red; left:0px; top:0px;}
}*/

/*this just changes color of email-address, no motion */
@keyframes email-address {
    0%   {color:black; }
    25%  {color:yellow; background-color: purple;}
    50%  {color:orange; background-color: blue;}
    75%  {color:purple; background-color: yellow;}
    100% {color:red; }
}


/* CUSTOMIZE THE CAROUSEL */

/* Carousel base class */
.carousel {
  margin-bottom: 4rem;
}

/* Since positioning the image, we need to help out the caption */
.carousel-caption {
  z-index: 10;
  bottom: 3rem;
}

/* Declare heights because of positioning of img element */
.carousel-item {
  height: 32rem;
  background-color: #777;
}

.carousel-item > img {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  height: 32rem;
}

